0026524: ShapeFix_Face crash when performing fix on an invalid face.

Check that method Context() returns not null handle was added.